# keywordtensor

./: .gitignore  LICENSE  README.md  packages.txt  pyproject.toml  test_av.py
.github/workflows/: main_keywordtensor.yml  publish.yml
demo/: app.py  requirements.txt
keywordtensor/: core.py
keywordtensor/pretrained/: prawda_falsz_config.json
