[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keywordtensor"
version = "1.0.18"
description = "A Python library for training custom keyword spotting models and running real-time voice command detection."
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "sounddevice",
    "onnxruntime",
    "torch",
    "torchaudio",
    "fastai",
    "torch-audiomentations",
    "torchcodec",
    "onnx"
]

[tool.setuptools]
packages = ["keywordtensor", "keywordtensor.pretrained"]

[tool.setuptools.package-data]
"keywordtensor.pretrained" = ["*.onnx", "*.json"]
