[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keywordtensor"
dynamic = ["version"]
description = "A Python library for training custom keyword spotting models and running real-time voice command detection."
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy",
    "sounddevice",
    "onnxruntime",
    "torch",
    "torchaudio",
    "fastai",
    "torch-audiomentations",
    "torchcodec",
    "onnx",
    "huggingface_hub"
]

[tool.setuptools]
packages = ["keywordtensor", "keywordtensor.pretrained"]

[tool.setuptools.package-data]
"keywordtensor.pretrained" = ["*.onnx", "*.json"]

[tool.setuptools_scm]
